[coverage:run]
source = src/smartmeter_austria_energy/

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplemented()
    if __name__ == '__main__':
    main()
show_missing = true

[tool:pytest]
testpaths = tests/
#asyncio_mode=auto
norecursedirs = .git
addopts =
    --cov=src/smartmeter_austria_energy/

[flake8]
# https://github.com/ambv/black#line-length
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504

[isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# splits long import on multiple lines indented by 4 spaces
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
indent = "    "
# by default isort don't check module indexes
not_skip = __init__.py
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = custom_components.smartmeter_austria_energy, tests
forced_separate = tests
combine_as_imports = true

#[mypy]
#python_version = 3.10
#ignore_errors = true
#follow_imports = silent
#ignore_missing_imports = true
#warn_incomplete_stub = true
#warn_redundant_casts = true
#warn_unused_configs = true



[metadata]
name = smartmeter_austria_energy
version = 1.1.0
author = NECH2004
description = Connect locally to a Kaifa smartmeter of an Austrian energy provicer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NECH2004/smartmeter_austria_energy
project_urls =
    Bug Tracker = https://github.com/NECH2004/smartmeter_austria_energy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
